CRONAPP-3837 - Atualizar o component Confirm Dialog (#190)
Problema
Ajustar o bloco para que fique mais funcional para o usuário

Solução
Foi criado um aba no menu para "Notificações" e houve transformação o bloco principal de modal de confirmação e botão do modal, e removido o botão de destroy que foi incorporado no bloco principal.

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -602,14 +602,17 @@
   "year": "Ano",
   "yearsToIncrement": "Anos a incrementar",
   "confirmDialogAlertName": "Modal de confirmação",
-  "confirmDialogAlertDescription": "Função que exibe modal de confirmação, podendo personalizar o ícone, título, subtítulo e adicionar função nos botões salvar e cancelar",
-  "showConfirmDialogAlert": "Exibir modal de confirmação",
-  "confimDialogAlert.icon": "Ícone",
-  "confimDialogAlert.title": "Título",
-  "confimDialogAlert.subtitle": "Subtítulo",
-  "hidebuttonSave": "Esconder o botão confirmar",
-  "destroyConfirmDialogAlert": "Fechar modal de confirmação",
-  "dialogRef": "Identificador do modal",
+  "confirmDialogAlertDescription": "Função que exibe um modal de confirmação, permitindo a personalização do ícone, título, subtítulo e botões de ação.",
+  "icon": "Ícone",
+  "subtitle": "Subtítulo",
+  "confimDialogAlert.listButton": "Lista de botões",
   "yes": "Sim",
-  "no": "Não"
+  "no": "Não",
+  "buttonConfirmDialogAlertDescription": "Função que define as caracteristicas do(s) botão(ões).",
+  "buttonConfirmDialogAlert": "Botão do modal",
+  "notificationCategory": "Notificações",
+  "buttonConfirmDialogAlert.value": "Ação do botão",
+  "buttonConfirmDialogAlert.primaryButton": "Botão de destaque",
+  "warning": "Aviso",
+  "info": "Informação"
 }
