--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -601,15 +601,18 @@
   "XMLHasRootElementName": "Has Root element?",
   "year": "Year",
   "yearsToIncrement": "Years to increase",
-  "confirmDialogAlertName": "Confirmation modal",
-  "confirmDialogAlertDescription": "Function that displays confirmation mode, being able to customize the icon, title, subtitle and add function in the save and cancel buttons",
-  "showConfirmDialogAlert": "Show confirmation modal",
-  "confimDialogAlert.icon": "Icon",
-  "confimDialogAlert.title": "Title",
-  "confimDialogAlert.subtitle": "Subtitle",
-  "hidebuttonSave": "Hide the confirm button",
-  "destroyConfirmDialogAlert": "Close confirmation modal",
-  "dialogRef": "Modal identifier",
+  "confirmDialogAlertName": "Confirmation Modal",
+  "confirmDialogAlertDescription": "A function that displays a confirmation modal, with a custom icon, title, subtitle and action buttons.",
+  "icon": "Icon",
+  "subtitle": "Subtitle",
+  "confimDialogAlert.listButton": "List of buttons",
   "yes": "Yes",
-  "no": "No"
+  "no": "No",
+  "buttonConfirmDialogAlertDescription": "Function that defines the characteristics of the button(s).",
+  "buttonConfirmDialogAlert": "Modal button",
+  "notificationCategory": "Notifications",
+  "buttonConfirmDialogAlert.value": "Button action",
+  "buttonConfirmDialogAlert.primaryButton": "Highlighted button",
+  "warning": "Warning",
+  "info": "Info"
 }
