CRONAPP-3766 - Criação e configuração das notificações em projetos (#188)
* iniciando o bloco

* ajustes finais

* ajustes finais 2

* remoção de extras

* ajustes finais 3

* ajustes finais

* ajustes finais 2

* add temporizador nas notificações

* ajustando os nomes

* ajustes na class NotificationHandler

* ajustes de revisão

* ajuste de revisão 2

* add class no this.cronapi.internal

* ajuste internal

* ajustes 3

* ajuste 4

* ajuste na clss

* ajustes finais

* tradução

* removendo item no  screen

* ajustes finais

* redução de codigo - review

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -488,6 +488,31 @@
   "screenNotifyName": "Show notification",
   "screenNotifyParam0": "Notification type: Can receive values success, error, warning, info or primary",
   "screenNotifyParam1": "Message",
+  "screenNotifySimpleDescription": "Function that displays simple notification",  
+  "screenNotifySimpleName": "Displays simple notification",
+  "screenNotifySimpleParam0": "Notification type: can be success, error, warning, info",
+  "screenNotifySimpleParam1": "Message: Message content to be displayed",
+  "screenNotifySimpleParam2": "Animation: can be fade, slide, zoom",
+  "screenNotifySimpleParam3": "Vertical position: can be top or bottom",
+  "screenNotifySimpleParam4": "Horizontal position: can be left, center, right",
+  "screenNotifySimpleParam5": "Hide notification: can be true or false",
+  "warning": "Warning",
+  "info": "Info",
+  "status": "Status",
+  "animation": "Animation",
+  "top": "Top",
+  "bottom": "Bottom",
+  "left": "Left",
+  "center": "Center",
+  "right": "Right",
+  "fade": "Fade",
+  "slide": "Slide",
+  "zoom": "Zoom",
+  "yes": "Yes",
+  "no": "No",
+  "horizontalPosition": "Horizontal Position",
+  "verticalPosition": "Vertical Position",
+  "autoHide": "Hide notification automatically",
   "searchIds": "Identifier",
   "searchIdsDescription": "Identifier field from screen",
   "second": "Second",
