Feature/CRONAPP-3720 - Utilização de Cookies
https://cronapp.atlassian.net/browse/CRONAPP-3720

## Problema:
## Melhoria:
Utilização de Cookies no lado cliente e servidor para salvar e recuperar mensagem ( em ambos os lados)
## Solução:
Criação de funções nas camadas cliente e servidor.

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -183,6 +183,7 @@
   "executeMultipleSqlDescription": "Execute multiple SQL comands splitted by (;)",
   "executeSql": "Run Command SQL",
   "executeSqlDescription": "Function to execute command SQL.",
+  "expirationTimeInSeconds":"Expiration time(s).",
   "EXTERNAL": "EXTERNAL",
   "extractTextByRegex" : "Extract text with Reg. Expression",
   "extractTextByRegexDescription" : "Function to extract text with Reg. Expression. Returns a list with incidences, if found.",
