Feature/CRONAPP-3720 - Utilização de Cookies (#191)
* Feature/CRONAPP-3720 - Utilização de Cookies

https://cronapp.atlassian.net/browse/CRONAPP-3720

## Problema:
## Melhoria:
Utilização de Cookies no lado cliente e servidor para salvar e recuperar mensagem ( em ambos os lados)
## Solução:
Criação de funções nas camadas cliente e servidor.

# Conflicts:
#	cronapi.js

* Feature/CRONAPP-3720 - Utilização de Cookies

https://cronapp.atlassian.net/browse/CRONAPP-3720

## Problema:
## Melhoria:
Utilização de Cookies no lado cliente e servidor para salvar e recuperar mensagem ( em ambos os lados)
## Solução:
Criação de funções nas camadas cliente e servidor.

Co-authored-by: Anderson Leal <andersongsi@gmail.com>

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -183,6 +183,7 @@
   "executeMultipleSqlDescription": "Execute multiple SQL comands splitted by (;)",
   "executeSql": "Run Command SQL",
   "executeSqlDescription": "Function to execute command SQL.",
+  "expirationTimeInSeconds":"Expiration time(s).",
   "EXTERNAL": "EXTERNAL",
   "extractTextByRegex" : "Extract text with Reg. Expression",
   "extractTextByRegexDescription" : "Function to extract text with Reg. Expression. Returns a list with incidences, if found.",
@@ -532,6 +533,8 @@
   "setCalendarSelectDatesDesc":"Select a list of dates from the calendar. (Available only if the calendar selection mode is set to 'Multiple')",
   "setCalendarValue":"Set current Date",
   "setCalendarValueDesc":"Sets the date of the current single selection from the calendar.",
+  "setCookie":"Set cookie.",
+  "setCookieDesc":"Function to set Cookie on the user's browser.",
   "setElementValueDescription": "Function that set a content on element",
   "setElementValueName": "Set a content element",
   "setLocalStorage": "Set Local Storage Item",
