--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -183,6 +183,7 @@
   "executeMultipleSqlDescription": "Executar Múltiplos Comandos SQL Separados por Ponto e Vírgula (;)",
   "executeSql": "Executar Comando SQL",
   "executeSqlDescription": "Função para executar comando SQL.",
+  "expirationTimeInSeconds":"Tempo de expiração(s)",
   "EXTERNAL": "EXTERNO",
   "extractTextByRegex": "Extrair texto com Exp. Regular",
   "extractTextByRegexDescription": "Função para extrair texto com Exp. Regular. Retorna uma lista com as incidências, caso enconte.",
@@ -508,6 +509,8 @@
   "setCalendarSelectDatesDesc":"Seleciona uma lista de datas do calendário. (Disponível apenas caso o modo de seleção do calendário esteja definido para 'Múltipla')",
   "setCalendarValue":"Definir data atual",
   "setCalendarValueDesc":"Define o valor da seleção única atual do calendário.",
+  "setCookie":"Definir Cookie.",
+  "setCookieDesc":"Função para definir Cookie no navegador do usuário.",
   "setElementValueDescription": "Função que define o conteúdo de um elemento",
   "setElementValueName": "Definir conteúdo do elemento",
   "setLocalStorage": "Adicionar Item na Sessão do navegador",
