ajustado translate embaixo

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -503,7 +503,7 @@
   "status": "Estado",
   "animation": "Animação",
   "top": "Topo",
-  "bottom": "embaixo",
+  "bottom": "Embaixo",
   "left": "Esquerda",
   "center": "Central",
   "right": "Direita",
