Adição de parâmetro. Unidade de tempo, com as op = (Segundos, minutos, horas e dias)
Feature/CRONAPP-3720 - Utilização de Cookies

https://cronapp.atlassian.net/browse/CRONAPP-3720

## Problema:
## Melhoria:
Utilização de Cookies no lado cliente e servidor para salvar e recuperar mensagem ( em ambos os lados)
## Solução:
Criação de funções nas camadas cliente e servidor.

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -151,6 +151,7 @@
   "datasourcePostParam0": "Datasouce",
   "date": "Date",
   "day": "Day",
+  "days": "Days",
   "daysToIncrement": "Days to increase",
   "dbName": "Database Name",
   "decade":"Decade",
@@ -183,7 +184,7 @@
   "executeMultipleSqlDescription": "Execute multiple SQL comands splitted by (;)",
   "executeSql": "Run Command SQL",
   "executeSqlDescription": "Function to execute command SQL.",
-  "expirationTimeInSeconds":"Expiration time(s).",
+  "expirationTime":"Expires: Expiration time for the defined interval.",
   "EXTERNAL": "EXTERNAL",
   "extractTextByRegex" : "Extract text with Reg. Expression",
   "extractTextByRegexDescription" : "Function to extract text with Reg. Expression. Returns a list with incidences, if found.",
@@ -387,6 +388,7 @@
   "makeCallServerBlocklyAsync": "call blockly asynchronous server - callback with blockly",
   "maxFileSize": "Maximum file size:",
   "maximumAge": "Maximum Age",
+  "measurementUnit": "Measurement unit: Measurement unit used to quantify the others parameters",
   "mediaType": "Media Type",
   "messageQRCode": "Message: Message displayed when camera is openned",
   "millisecond": "Millisecond",
