--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -151,6 +151,7 @@
   "datasourcePostParam0": "Fonte de dados",
   "date": "Data",
   "day": "Dia",
+  "days": "Dias",
   "daysToIncrement": "Dias a incrementar",
   "dbName": "Nome do Banco",
   "decade":"Década",
@@ -183,7 +184,7 @@
   "executeMultipleSqlDescription": "Executar Múltiplos Comandos SQL Separados por Ponto e Vírgula (;)",
   "executeSql": "Executar Comando SQL",
   "executeSqlDescription": "Função para executar comando SQL.",
-  "expirationTimeInSeconds":"Tempo de expiração(s)",
+  "expirationTime":"Expiração: Tempo de expiração do cookie para o intervalo definido.",
   "EXTERNAL": "EXTERNO",
   "extractTextByRegex": "Extrair texto com Exp. Regular",
   "extractTextByRegexDescription": "Função para extrair texto com Exp. Regular. Retorna uma lista com as incidências, caso enconte.",
@@ -388,6 +389,7 @@
   "makeCallServerBlocklyAsync": "Chamar bloco servidor assíncrono - callback com bloco",
   "maxFileSize": "Tamanho máximo para arquivo:",
   "maximumAge": "Tempo Máximo",
+  "measurementUnit": "Unidade de medida: Unidade de medida do tempo passado como parâmetro",
   "mediaType": "Tipo de Mídia",
   "messageQRCode": "Mensagem: Mensagem exibida enquanto a camera esta aberta",
   "millisecond": "Millisegundo",
