#Ajustes de grafia e internacionalização.
Feature/CRONAPP-3720 - Utilização de Cookies

https://cronapp.atlassian.net/browse/CRONAPP-3720

## Problema:
## Melhoria:
Utilização de Cookies no lado cliente e servidor para salvar e recuperar mensagem ( em ambos os lados)
## Solução:
Criação de funções nas camadas cliente e servidor.

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -275,6 +275,8 @@
   "getChildrenParam1": "Value to search:A element or a element name to be search key",
   "getConnection": "Network Status",
   "getConnectionDescription": "Function to provides information about the device's cellular and wifi connection",
+  "getCookie":"Get cookie.",
+  "getCookieDesc":"Function to get Cookie on the user's browser.",
   "getCurrentAcceleration": "Get Current Acceleration",
   "getCurrentAccelerationDescription": "Function that provides access to device accelerometer.",
   "getCurrentPosition": "Get geo-referenced position",
