CRONAPP-3879-Criar componente para visualização do dashboard
Criar componente para visualização do dashboard

https://cronapp.atlassian.net/browse/CRONAPP-3879

## Problema:
Criar API para renderização do novo componente dashboard
## Solução:
API para blocos criada.

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -136,6 +136,7 @@
   "createSerieParamData": "Data: Serie data",
   "createSerieParamName": "Serie name",
   "createSerieParamOptions": "Options: Serie Options",
+  "dashboard": "Dashboard",
   "datasource": "Datasource",
   "datasourceFilterDescription": "Function that filter a datasource concat '/' and the path on parameter",
   "datasourceFilterName": "Filter",
@@ -423,6 +424,8 @@
   "obj": "Object",
   "object": "Object",
   "ObjectType.DATETIME": "Date",
+  "openDashboard": "Open dashboard",
+  "openDashboardDescription": "Function responsible for opening a dashboard",
   "openDatabase": "Create Database",
   "openDatabaseDescription": "Function to create a database on the mobile device. If no name is given, it will be created with a default name.",
   "openInAppBrowser": "Open URL inside app",
