CRONAPP-3878 - Funções de Mapa para o bloco servidor no cliente
https://cronapp.atlassian.net/browse/CRONAPP-3878

### Melhoria:
Cronapp Studio não tem funções para Mapa no Cliente
### Solução:
Desenvolvido Bloco de Funções para Mapa

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -119,6 +119,9 @@
   "createExceptionParam0": "Message",
   "createFile": "Create File",
   "createFileDescription": "Function to create a file on the mobile device.",
+  "createMap": "Create Map with",
+  "createMapDesc": "Function that creates a Map object",
+  "createMapVariableParam0": "Value(s): Values to be added to the Map",
   "createNewObject": "Create new object",
   "createObject": "Create object",
   "createObjectDescription": "Function that create an object from a text",
@@ -302,6 +305,14 @@
   "getImageFrom": "Get image from...",  
   "getLocalStorage": "Get Local Storage Item",
   "getLocalStorageDesc": "Function that get an item in session storage on browser (global). This Item is keeped when the browser are closed and are visible to all tabs",
+  "getMapValueByPath": "Get Map Field by Path",
+  "getMapValueByPathDesc": "Function to get Map Field by Path",
+  "getMapValueByPathParam0": "Map: Map that will be searched the Field",
+  "getMapValueByPathParam1": "Path: Path that will be searched, ex: document.rg.issuer",
+  "getMapValueByKey": "Get Map Field by Key",
+  "getMapValueByKeyDesc": "Function to get Map Field by Key",
+  "getMapValueByKeyParam0": "Map: Map that will be searched the Field",
+  "getMapValueByKeyParam1": "Key: Key that will be searched, ex: gender",
   "getMinuteFromDate": "Get date minute",
   "getMinutesBetweenDates": "Get minutes total between dates",
   "getMonthFromDate": "Get month of date",
@@ -543,6 +554,16 @@
   "setElementValueName": "Set a content element",
   "setLocalStorage": "Set Local Storage Item",
   "setLocalStorageDesc": "Function that set an item in session storage on browser (global). This Item is keeped when the browser are closed and are visible to all tabs",
+  "setMapValueByKey": "Set Value on Map by Key",
+  "setMapValueByKeyDesc": "Function to Define Field on the Map by a given Key",
+  "setMapValueByKeyParam0": "Map: Map to be added to the Field",
+  "setMapValueByKeyParam1": "Key: Map Search Key",
+  "setMapValueByKeyParam2": "Value: Value to be defined on the Map",
+  "setMapValueByPath": "Set Value on Map by Path",
+  "setMapValueByPathDesc": "Function to Set Field on Map through a given Path",
+  "setMapValueByPathParam0": "Map: Map to be added to the Field",
+  "setMapValueByPathParam1": "Path: Path that the Value will be added, eg: document.rg.issuer",
+  "setMapValueByPathParam2": "Value: Value to be defined on the Map, ex 'SSP'",
   "setProperty": "Set Value",
   "setPropertyDescription": "Function to assign value to object.",
   "setRequestToken": "Define Token",
