CRONAPP-3995 Criar função para leitura de biometria digital Android/iOS
https://cronapp.atlassian.net/browse/CRONAPP-3995

## Melhoria:
Nova função para leitura biométrica

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -192,6 +192,9 @@
   "field": "Field",
   "fieldNameFromScreen": "Get field name",
   "fileName": "File Name",
+  "fingerPrintRead": "Ler biometria digital",
+  "fingerPrintReadDescription": "Função que inicia o dispositivo para leitura de impressão digital",
+  "fingerPrintResult": "0: Autenticação bem sucedida; -1: Falha na autenticação; -2: Dispositivo não suportado",  
   "firstRecordDescription": "Function that points to the first datasource cursor",
   "firstRecordName": "Go to First Record",
   "firstRecordParam0": "Datasource",
