--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -192,6 +192,9 @@
   "field": "Campo",
   "fieldNameFromScreen": "Obter nome do campo",
   "fileName": "Nome do Arquivo",
+  "fingerPrintRead": "Ler biometria digital",
+  "fingerPrintReadDescription": "Função que inicia o dispositivo para leitura de impressão digital",
+  "fingerPrintResult": "0: Autenticação bem sucedida; -1: Falha na autenticação; -2: Dispositivo não suportado",  
   "firstRecordDescription": "Função que põe o cursor no primeiro registro da Fonte de dados",
   "firstRecordName": "Ir para Primeiro Registro",
   "firstRecordParam0": "Fonte de dados",
