CRONAPP-3878 - Funções de Mapa para o bloco servidor no cliente (#200)
* CRONAPP-3878 - Funções de Mapa para o bloco servidor no cliente

https://cronapp.atlassian.net/browse/CRONAPP-3878

### Melhoria:
Cronapp Studio não tem funções para Mapa no Cliente
### Solução:
Desenvolvido Bloco de Funções para Mapa

* CRONAPP-3878 - Funções de Mapa para o bloco servidor no cliente

https://cronapp.atlassian.net/browse/CRONAPP-3878

### Melhoria:
Cronapp Studio não tem funções para Mapa no Cliente
### Solução:
Desenvolvido Bloco de Funções para Mapa

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -119,6 +119,9 @@
   "createExceptionParam0": "Mensagem",
   "createFile": "Criar Arquivo",
   "createFileDescription": "Função para criar um arquivo no dispositivo móvel.",
+  "createMap": "Criar Mapa com",
+  "createMapDesc": "Função que cria um objeto Mapa",
+  "createMapVariableParam0": "Valor(es): Valores a serem adicionados no Mapa",
   "createNewObject": "Criar novo objeto",
   "createObject": "Criar objeto",
   "createObjectDescription": "Função que cria um objeto a partir de um texto",
@@ -306,6 +309,14 @@
   "getImageFrom": "Obter imagem da...",  
   "getLocalStorage": "Obter Item da Sessão do navegador",
   "getLocalStorageDesc": "Função que obtém um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas",
+  "getMapValueByPath": "Obter Campo do Mapa por Caminho",
+  "getMapValueByPathDesc": "Função para obter Campo do Mapa por Caminho",
+  "getMapValueByPathParam0": "Mapa: Mapa que será buscado o Campo",
+  "getMapValueByPathParam1": "Caminho: Caminho que será buscado, ex: documento.rg.emissor",
+  "getMapValueByKey": "Obter Campo do Mapa por Chave",
+  "getMapValueByKeyDesc": "Função para obter Campo do Mapa por Chave",
+  "getMapValueByKeyParam0": "Mapa: Mapa que será buscado o Campo",
+  "getMapValueByKeyParam1": "Chave: Chave que será buscado, ex: genero",
   "getMinuteFromDate": "Obter minuto da data",
   "getMinutesBetweenDates": "Obter total de minutos entre datas",
   "getMonthFromDate": "Obter mês da data",
@@ -547,6 +558,16 @@
   "setElementValueName": "Definir conteúdo do elemento",
   "setLocalStorage": "Adicionar Item na Sessão do navegador",
   "setLocalStorageDesc": "Função que adiciona um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas",
+  "setMapValueByKey": "Definir valor no Mapa por Chave",
+  "setMapValueByKeyDesc": "Função para Definir Campo no Mapa através de uma determinada Chave",
+  "setMapValueByKeyParam0": "Mapa: Mapa que será adicionado o Campo",
+  "setMapValueByKeyParam1": "Chave: Chave de Busca no Mapa",
+  "setMapValueByKeyParam2": "Valor: Valor a ser definido no Mapa",
+  "setMapValueByPath": "Definir valor no Mapa por Caminho",
+  "setMapValueByPathDesc": "Função para Definir Campo no Mapa através de um determinado Caminho",
+  "setMapValueByPathParam0": "Mapa: Mapa que será adicionado o Campo",
+  "setMapValueByPathParam1": "Caminho: Caminho que o Valor será adicionado, ex: documento.rg.emissor",
+  "setMapValueByPathParam2": "Valor: Valor a ser definido no Mapa, ex: 'SSP'",
   "setProperty": "Atribuir valor",
   "setPropertyDescription": "Função para atribuir o valor ao objeto",
   "setRequestToken": "Definir Token",
