CRONAPP-3876 - Formatação de texto por bloco (#201)
https://cronapp.atlassian.net/browse/CRONAPP-3876

###Melhoria:
Cronapp Studio não tem funções para Suprir Texto
###Solução:
Desenvolvido Bloco para Suprir Texto

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -622,6 +622,10 @@
   "timeout": "Time Out",
   "title": "title",
   "toLogic": "For logic",
+  "toSupplyText": "Supply Text",
+  "toSupplyTextDescription": "Function to format text with replacement",
+  "toSupplyTextParam0": "Text: Text that will be formatted, ex. Today is {0} of month {1} and year {2}",
+  "toSupplyTextParam1": "Terms: Terms to replace in Text, ex. [31, 12, 2050]",
   "true": "True",
   "type": "Type",
   "typeOf": "Is type of?",
