--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -623,6 +623,10 @@
   "timeout": "Intervalo",
   "title": "Título",
   "toLogic": "Para lógico",
+  "toSupplyText": "Suprir Texto",
+  "toSupplyTextDescription": "Função para formatar texto com substituição",
+  "toSupplyTextParam0": "Text: Texto que será formatado. ex: Hoje é {0} do mês {1} e ano {2}",
+  "toSupplyTextParam1": "Termos: Termos para substituir no Texto. ex: [31, 12, 2050]",
   "true": "Verdadeiro",
   "type": "Tipo",
   "typeOf": "É do tipo? ",
