CRONAPP-4069 - Internacionalização para Blocos de Mapa e Suprir Texto
https://cronapp.atlassian.net/browse/CRONAPP-4069

###Melhoria:
Não existe categoria de Mapa nos Blocos de Cliente
Parâmetro Texto para pt-br está como Text
###Solução:
Categoria Mapa e Ajustes nos Textos dos Parâmetros

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -43,6 +43,7 @@
   "CategoryType.TEXT": "Texto",
   "CategoryType.UTIL": "Util",
   "CategoryType.XML": "Xml",
+  "CategoryType.MAP": "Mapa",
   "Cell2GConnection": "Conexão celular 2G",
   "Cell3GConnection": "Conexão celular 3G",
   "Cell4GConnection": "Conexão celular 4G",
@@ -625,8 +626,8 @@
   "toLogic": "Para lógico",
   "toSupplyText": "Suprir Texto",
   "toSupplyTextDescription": "Função para formatar texto com substituição",
-  "toSupplyTextParam0": "Text: Texto que será formatado. ex: Hoje é {0} do mês {1} e ano {2}",
-  "toSupplyTextParam1": "Termos: Termos para substituir no Texto. ex: [31, 12, 2050]",
+  "toSupplyTextParam0": "Texto: Texto que será formatado. ex: Hoje é {0} do mês {1} e ano {2}",
+  "toSupplyTextParam1": "Termo: Termo para substituir no Texto. ex: [31, 12, 2050]",
   "true": "Verdadeiro",
   "type": "Tipo",
   "typeOf": "É do tipo? ",
