--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -43,6 +43,7 @@
   "CategoryType.TEXT": "Text",
   "CategoryType.UTIL": "Util",
   "CategoryType.XML": "Xml",
+  "CategoryType.MAP": "Map",
   "Cell2GConnection": "Cell 2G connection",
   "Cell3GConnection": "Cell 3G connection",
   "Cell4GConnection": "Cell 4G connection",
@@ -625,7 +626,7 @@
   "toSupplyText": "Supply Text",
   "toSupplyTextDescription": "Function to format text with replacement",
   "toSupplyTextParam0": "Text: Text that will be formatted, ex. Today is {0} of month {1} and year {2}",
-  "toSupplyTextParam1": "Terms: Terms to replace in Text, ex. [31, 12, 2050]",
+  "toSupplyTextParam1": "Term: Term to replace in Text, ex. [31, 12, 2050]",
   "true": "True",
   "type": "Type",
   "typeOf": "Is type of?",
