CRONAPP-3879-Criar componente para visualização do dashboard (#208)
Criar componente para visualização do dashboard

https://cronapp.atlassian.net/browse/CRONAPP-3879

## Problema:
Criar API para renderização do novo componente dashboard
## Solução:
API para blocos criada.

Co-authored-by: Ronélio Oliveira <ronelio.oliveira@gmail.com>

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -140,6 +140,7 @@
   "createSerieParamData": "Dados: Dados da série",
   "createSerieParamName": "Nome da série",
   "createSerieParamOptions": "Opções: Opções da série",
+  "dashboard": "Dashboard",
   "datasource": "Fonte de dados",
   "datasourceFilterDescription": "Função que filtra uma Fonte de dados concatenando '/' e o caminho do parâmetro",
   "datasourceFilterName": "Filtrar",
@@ -439,6 +440,8 @@
   "obj": "Objeto",
   "object": "Objeto",
   "ObjectType.DATETIME": "Data",
+  "openDashboard": "Abrir dashboard",
+  "openDashboardDescription": "Função responsável por abrir um dashboard",
   "openDatabase": "Criar banco de dados",
   "openDatabaseDescription": "Função para criar um banco de dados no dispositivo móvel. Caso não seja passado um nome , será criado com um nome default.",
   "openInAppBrowser": "Abrir URL dentro do app",
